--- a/css/blog/blog.css
+++ b/css/blog/blog.css
@@ -2,16 +2,17 @@
     .blog_main{
         width: 1000px;
         margin: 0 auto;
-        background-color:aquamarine;
         margin-top: 10px;
+        overflow:auto;
     }
     .blog_content{
         margin-top: 10px;
-        background-color: #eee;
+        margin-bottom: 10px;
         width: 700px;
         margin-left: 20px;
         float: left;
-        font-family: 'Lato', "PingFang SC", "Microsoft YaHei", sans-serif;
+        font-family: "Helvetica Neue", Helvetica, Arial,'Lato', "PingFang SC", "Microsoft YaHei", sans-serif;
+        box-shadow: 0px 0px 9px #ddd; 
     }
     
     .blog_content_header{
@@ -21,10 +22,11 @@
     }
     .blog_content_header span{
         font-size: 25px;
+        font-weight: 600;
     }
     .blog_content_mid1{
-        border-top: 1px solid #aaa;
-        padding: 10px 0px 0px;
+        border-top: 1px solid #ddd;
+        padding: 2px 0px 0px;
         width: 260px;
         margin: 0 auto;
         font-size: 12px;
@@ -47,8 +49,8 @@
         width: 260px;
         text-align: center;
         margin: 0 auto;
-        padding-bottom: 10px;
-        border-bottom: 1px solid #aaa;
+        padding-bottom: 2px;
+        border-bottom: 1px solid #ddd;
     }
     .groupby span:hover{
         color: chocolate;
@@ -82,7 +84,12 @@
     .tag li{
         color: white; 
     }
-    
+    .blog_content_main{
+        height: 700px;
+        padding: 20px 30px;
+    }
+    .blog_content_main span{
+    }
     
     .blog_right{
         margin-top: 10px;
@@ -91,6 +98,11 @@
         float: right;
         margin-right: 20px;
         background-color: #eee;
+    }
+    .blog_review{
+        height: 20px;
+        width: 1000px;
+        margin: 30px auto;
     }
 }
 
