--- a/css/blog/blog.css
+++ b/css/blog/blog.css
@@ -100,10 +100,116 @@
         background-color: #eee;
     }
     .blog_review{
-        height: 20px;
         width: 1000px;
         margin: 30px auto;
+        box-shadow: 0px 0px 9px #ddd; 
+        overflow: auto;
     }
+    .blog_review_write{
+        margin: 30px 20px;
+        border: 1px solid #ccc;
+        height: 100px;
+        border-radius: 10px;
+        background-color: #fefefe;
+    }
+    .review_w_header{
+        height: 80px;
+        border-right: 1px solid #ccc;
+        width: 80px;
+        margin: 0 0;
+        padding: 10px;
+        background-color: #eee;
+        float: left;
+    }
+    .review_w_hpic{
+        width: 60px;
+        height: 60px;
+        border-radius: 30px;
+        margin: 0px 10px;
+        margin-bottom: 6px;
+        box-shadow: 0px 0px 9px #aaa; 
+        text-align: center;
+        line-height: 60px;
+        font-family: "幼圆", sans-serif;
+        /*Mozilla内核*/
+        -moz-transition:box-shadow 0.2s linear;
+        /*Webkit内核*/
+        -webkit-transition:box-shadow 0.2s linear;
+        /*Opera*/
+        -o-transition:box-shadow 0.2s linear;
+        /*W3C 标准*/
+        transition:box-shadow 0.2s linear;
+    }
+    .review_w_hpic:hover{
+        cursor: pointer;
+        box-shadow: 0px 0px 20px #aaa; 
+    }
+    .review_w_hpic span{
+        color: #888;
+        font-size: 20px;
+    }
+    .review_w_reviewer{
+        font-family: "Helvetica Neue", Helvetica, Arial,'Lato', "PingFang SC", "Microsoft YaHei", sans-serif;
+        text-align: center;
+    }
+    
+    
+    .review_w_main {
+        border: 1px solid #ddd;
+        margin-top: 17px;
+        margin-left: 120px;
+        margin-right: 20px;
+        position: relative;
+        font-family: "Helvetica Neue", Helvetica, Arial,'Lato', "PingFang SC", "Microsoft YaHei", sans-serif;
+        font-size: 12px;
+    }
+
+    .review_w_main:before {
+        content: '';
+        position: absolute;
+        display: block;
+        width: 14px;
+        height: 14px;
+        top: 14px;
+        left: -7px;
+        border: 1px solid #ddd;
+        border-width: 0 0 1px 1px;
+        background: #fff;
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        transform: rotate(45deg)
+    }
+
+    .review_w_main textarea {
+        background-color: #fcfcfc;
+        font-size: 12px;
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 65px;
+        padding: 4px 10px;
+        margin: 0;
+        border: 0;
+        resize: none;
+        font-family: inherit;
+        color: #111;
+        transition: line-height 0.2s ease;
+        -moz-transition: line-height 0.2s ease;
+        -webkit-transition: line-height 0.2s ease;
+        -o-transition: line-height 0.2s ease;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        line-height: 55px;
+    }
+
+    .review_w_main textarea:focus {
+        outline: 0;
+        line-height: normal;
+        font-size: 12px;
+        
+    }
+    
 }
 
 @media screen and (min-width:980px) and (max-width:1199px){
